--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,3 @@
-# Node.js
+# .gitignore
+#.env
 node_modules/
-.env
-package-lock.json
-
-# Knex migrations and seeds (optional, falls generiert und nicht versioniert)
-knexfile.js.bak
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# React
-build/
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# OS-generated files
-*.swp
-*.swo
-Thumbs.db
-.DS_Store
-
-# IDE/Editor config
-.vscode/
-.idea/
-*.iml
