--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
+  "name": "calendar-api",
+  "version": "1.0.0",
+  "description": "REST API for managing a calendar system.",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "calendar-api": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "knex": "^3.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^2.5.1",
     "mysql2": "^3.11.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
-  },
-  "scripts": {
-  "start": "nodemon index.js"
-}
-
+    "nodemon": "^3.0.1"
+  }
 }
