--- a/package.json
+++ b/package.json
@@ -1,69 +1,13 @@
 {
-<<<<<<< HEAD
-  "name": "calendar-api",
+  "name": "calendar-project",
   "version": "1.0.0",
-  "description": "REST API for managing a calendar system.",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "calendar-api": "file:",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "knex": "^2.5.1",
-    "mysql2": "^3.11.4"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-=======
-  "name": "client",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
-    "react": "^18.3.1",
-    "react-calendar": "^5.1.0",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"npm start --prefix client\" \"npm run dev --prefix server\"",
+    "install-all": "npm install && cd client && npm install && cd ../server && npm install"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
->>>>>>> 26df0a275a5e53864d1243a8946e7b845fffc351
+  "dependencies": {
+    "calendar-project": "file:",
+    "concurrently": "^8.2.2"
   }
 }
