--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "install-all": "npm install && cd client && npm install && cd ../server && npm install"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/multimonth": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "calendar-project": "file:",
     "concurrently": "^8.2.2"
   }
