--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 # Database configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=1q2w3e4r
 DB_NAME=calendar
 DB_PORT=3306
 BACKEND_PORT=5000
